quic/s2n-quic-platform/src/bpf/cbpf/snapshots/s2n_quic_platform__bpf__cbpf__tests__len_check_display.snap
---
source: quic/s2n-quic-platform/src/bpf/cbpf/tests.rs
expression: prog
---
l0   : LD len
l1   : JGT #100,l3,l2
l2   : RET #0
l3   : RET #1
