quic/s2n-quic-platform/src/bpf/cbpf/snapshots/s2n_quic_platform__bpf__cbpf__tests__varint_skip_c_literal.snap
---
source: quic/s2n-quic-platform/src/bpf/cbpf/tests.rs
expression: actual_c_literal
---
{ 0x01,  0,  0, 0000000000 },
{ 0x50,  0,  0, 0000000000 },
{ 0x74,  0,  0, 0x00000006 },
{ 0x04,  0,  0, 0x00000001 },
{ 0x25,  3,  0, 0x00000002 },
{ 0x04,  0,  0, 0x00000001 },
{ 0x15,  1,  0, 0x00000004 },
{ 0x04,  0,  0, 0x00000004 },
{ 0x0c,  0,  0, 0000000000 },
{ 0x07,  0,  0, 0000000000 },
{ 0x06,  0,  0, 0000000000 },
