quic/s2n-quic-platform/src/bpf/cbpf/snapshots/s2n_quic_platform__bpf__cbpf__tests__varint_skip_debug.snap
---
source: quic/s2n-quic-platform/src/bpf/cbpf/tests.rs
expression: prog
---
Program {
    instructions: [
        Instruction {
            code: 1,
            jt: 0,
            jf: 0,
            class: LDX,
            size: W,
            mode: IMM,
            k: 0,
        },
        Instruction {
            code: 80,
            jt: 0,
            jf: 0,
            class: LD,
            size: B,
            mode: IND,
            k: 0,
        },
        Instruction {
            code: 116,
            jt: 0,
            jf: 0,
            class: ALU,
            op: RSH,
            k: 0x6,
        },
        Instruction {
            code: 4,
            jt: 0,
            jf: 0,
            class: ALU,
            op: ADD,
            k: 0x1,
        },
        Instruction {
            code: 37,
            jt: 3,
            jf: 0,
            class: JMP,
            op: JGT,
            jt: 3,
            k: 0x2,
        },
        Instruction {
            code: 4,
            jt: 0,
            jf: 0,
            class: ALU,
            op: ADD,
            k: 0x1,
        },
        Instruction {
            code: 21,
            jt: 1,
            jf: 0,
            class: JMP,
            op: JEQ,
            jt: 1,
            k: 0x4,
        },
        Instruction {
            code: 4,
            jt: 0,
            jf: 0,
            class: ALU,
            op: ADD,
            k: 0x4,
        },
        Instruction {
            code: 12,
            jt: 0,
            jf: 0,
            class: ALU,
            op: ADD,
            k: 0,
        },
        Instruction {
            code: 7,
            jt: 0,
            jf: 0,
            class: MISC,
            k: 0,
        },
        Instruction {
            code: 6,
            jt: 0,
            jf: 0,
            class: RET,
            size: W,
            mode: IMM,
            k: 0,
        },
    ],
}
